general ux improvements

--- a/index.html
+++ b/index.html
@@ -2,12 +2,64 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/site-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Stergios Pappos – Web Designer & Developer crafting custom, high-performing websites with a focus on design, development, and performance."
+    />
+    <meta name="theme-color" content="#131312" />
+    <meta
+      property="og:title"
+      content="Stergios Pappos Portfolio | Web Designer & Developer"
+    />
+    <meta
+      property="og:description"
+      content="Crafting beautiful, user-centric websites and applications."
+    />
+    <meta property="og:image" content="/assets/social-share.jpg" />
+    <meta property="og:url" content="https://stergiospappos.me" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Stergios Pappos Portfolio | Web Designer & Developer"
+    />
+    <meta
+      name="twitter:description"
+      content="Crafting beautiful, user-centric websites and applications."
+    />
+    <meta name="twitter:image" content="/assets/social-share.jpg" />
+
+    <link
+      rel="icon"
+      type="image/png"
+      href="/assets/favicon/favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="/assets/favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon/favicon.svg" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/assets/favicon/apple-touch-icon.png"
+    />
+    <link rel="manifest" href="/assets/favicon/site.webmanifest" />
+
     <title>Stergios Pappos Portfolio | Web Designer & Developer</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" role="main" aria-label="Main Content"></div>
+    <noscript>
+      <p>
+        This website requires JavaScript to function properly. Please enable
+        JavaScript in your browser settings.
+      </p>
+    </noscript>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
